[project]
name = "grundfos-bluetooth"
version = "0.1.0"
description = "Home Assistant integration for Grundfos Bluetooth pumps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.0.0",
    "homeassistant>=2025.12.0",
    "voluptuous>=0.15.2",
    "voluptuous-openapi>=0.2.0",
    "astral==3.2",
    "home-assistant-bluetooth==2.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-homeassistant-custom-component",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
